# Credit-Decision-Intelligence

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  COWORK_PROJECT_INSTRUCTIONS.md  DECISIONS.md  EVALUATION_GAP_ANALYSIS.md  Halcyon_Readiness_Review.pptx  LICENSE  Makefile  PRD.md  PROGRESS.md  Project_Report.md  README.md  ROADMAP.md  SECURITY.md  TRD.md  dataset_card.md  demo_inputs.md  halcyon_mvp.py  model_dataset_progress_report.md  project_handover_summary.md  pyproject.toml  requirements.txt  requirements_stage3.txt  research_market_review.md  run_live_test.py  smoke_test.py
agents/: credit_agent.py  evaluation_agent.py  income_agent.py  policy_agent.py  record_writer.py  risk_agent.py  synthesizer_agent.py
api/: main.py  routes.py  routes_v2.py  schemas.py
data/: amex_eda.py  analyze_lc.py  build_amex_dataset.py  build_unified_dataset.py  check_amex_cols.py  check_labels.py  create_sample.py  dataset_card.md  eda_script.py  inspect_lc_raw.py  profile_amex.py  train_lc_feasibility.py
dataset/: amex_sample_50rows.csv  sample_unified_dataset.csv
docs/: RUNBOOK.md  risk_register.md  runbook.md
eval/: dspy_optimizer.py  fairness_test.py  final_evaluation_report.md  ragas_runner.py
gateway/: prompts.py  router.py
graph/: pipeline.py
models/: feature_schema_v1.json  feature_schema_v2_lc.json  lgbm_halcyon_v2_lc.txt  train_lc_v2.py  train_risk_model.py
state/: application_state.py
tests/: run_regression.py
tools/: build_policy_kb.py  credit_bureau_tool.py  credit_score_bridge.py  income_db_tool.py  (+3 more)
(+5 files in other folders)
